--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
         platform: [ubuntu-latest, macos-latest, windows-latest]
-        backend: [pyqt5, pyqt6, pyside2]
+        backend: [pyqt5, pyqt6, pyside2, pyside6]
         include:
           - python-version: "3.10"
             platform: ubuntu-latest
@@ -47,9 +47,14 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - uses: tlambert03/setup-qt-libs@v1.5
       - name: Install dependencies
-        run: python -m pip install ".[test]"
+        run: python -m pip install --upgrade hatch
 
       - name: Test
         uses: aganders3/headless-gui@v1
         with:
-          run: pytest -v
+          run: hatch -v run +backend=${{ matrix.backend }} test:run
+
+      - name: Coverage
+        uses: codecov/codecov-action@v3
+        with:
+          fail_ci_if_error: false
