--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,3 +55,8 @@ jobs:
         uses: aganders3/headless-gui@v1
         with:
           run: hatch -v run +backend=${{ matrix.backend }} test:run
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
