Update pyproject.toml with codecov settings
Settings for uploading code coverage information to codecov.io

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,3 +76,18 @@ matrix.backend.features = [
         "pyside6",
     ] },
 ]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "if TYPE_CHECKING:",
+    "@overload",
+    "except ImportError",
+    "except ImportError*",
+    "raise NotImplementedError()",
+    "pass",
+    "\\.\\.\\.",
+]
+omit = [
+    "test_waitingspinnerwidget.py",
+]
